# utesting_artlogic

./: README.md
fizzbuzz/: pyproject.toml
fizzbuzz/fizzbuzz/: fizzbuzz.py
fizzbuzz/tests/: test_fizzbuzz.py
leap_year_kata/: pyproject.toml
leap_year_kata/leap_year_kata/: leap_year_kata.py
leap_year_kata/tests/: test_leap_year_kata.py
mars_rover/: pyproject.toml
mars_rover/mars_rover/: mars_rover.py
mars_rover/tests/: test_mars_rover.py
shopping_cart/: pyproject.toml
